--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <!-- Header / Navbar -->
+   <!-- Header / Navbar -->
 <header class="header">
   <!-- Logo -->
   <div class="header__logo">
@@ -44,6 +44,7 @@
 
 
 
+
  <!-- Hero Section -->
 <section class="hero flex">
   <!-- left section -->
@@ -70,32 +71,12 @@
     </div>
   </div>
 
-  <!-- right section -->
-  <div class="right relative">
-    <!-- Ellipses (backgrounds) -->
-  <div class="ellipse2"></div>
-  <div class="ellipse1"></div>
-    <img src="images/happy.png" alt="resume girl" class="main-image" >
+  <!-- Right section (replaced with single image) -->
+<div class="right">
+  <img src="Assets/HeroImage.png" alt="Hero section graphic" class="hero-combined-image">
+</div>
 
-    <!-- Badge 1 -->
-    <div class="badge rating">
-      <div>4.9</div>
-      <div class="rating-info">
-        <span class="stars">⭐ ⭐ ⭐ ⭐ ⭐</span>
-        <span class="rating-text">Instructor Rating</span>
-      </div>
-    </div>
-
-    <!-- Badge 2 -->
-    <div class="badge resume-count">
-        
-       <img src="images/mask.png" alt="mask" class="mask"> 
-      <div class="rating-info">
-        <span class="number">260+</span>
-        <span class="resume">Online Resume Created</span>
-      </div>
-    </div>
-  </div>
+  
 </section>
 
 
