--- a/index.html
+++ b/index.html
@@ -10,21 +10,11 @@
 </head>
 <body>
    <!-- Header / Navbar -->
+<!-- Desktop Header -->
 <header class="header">
-  <!-- Logo -->
   <div class="header__logo">
     <img src="images/logo.png" alt="Company Logo" class="logo">
   </div>
-
-  <!-- Burger toggle (checkbox + label) -->
-  <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-  <label for="menu-toggle" class="burger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </label>
-
-  <!-- Navigation Menu -->
   <nav class="header__nav">
     <ul class="nav__list">
       <li class="nav__item">Home</li>
@@ -34,12 +24,51 @@
       <li class="nav__item">FAQ</li>
     </ul>
   </nav>
-
-    <!-- CTA Button -->
   <div class="header__cta">
     <button class="btn btn--primary">Get A Quote</button>
   </div>
 </header>
+<!-- Mobile Header -->
+<header class="header-mobile">
+  <!-- Logo on left (header) -->
+  <img src="images/logo.png" alt="Company Logo" class="header__logo-mobile">
+
+  <!-- Burger toggle on right -->
+  <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+  <label for="menu-toggle" class="burger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </label>
+
+  <!-- Right-side Drawer -->
+  <nav class="header__drawer">
+    <!-- Top bar with logo + close -->
+    <div class="drawer__topbar">
+      <!-- Logo inside drawer -->
+      <img src="images/logo.png" alt="Logo" class="drawer__logo">
+
+      <!-- Close button -->
+      <label for="menu-toggle" class="drawer__close">
+        <img src="Assets/close.png" alt="Close">
+      </label>
+    </div>
+
+    <!-- Mobile nav links -->
+    <ul class="drawer__list">
+      <li class="drawer__item"><img src="Assets/Home.png" alt="" class="drawer__icon"> Home</li>
+      <li class="drawer__item"><img src="Assets/AboutUs.png" alt="" class="drawer__icon"> About Us</li>
+      <li class="drawer__item"><img src="Assets/OurServices.png" alt="" class="drawer__icon"> Our Services</li>
+      <li class="drawer__item"><img src="Assets/Pricing.png" alt="" class="drawer__icon"> Pricing</li>
+      <li class="drawer__item"><img src="Assets/FAQ.png" alt="" class="drawer__icon"> FAQ</li>
+      <li class="drawer__item drawer__cta">
+        <button class="btn btn--primary">CONTACT US</button>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+
 
 
 
@@ -85,20 +114,20 @@
   <!-- Section Header -->
   <div class="features-header">
     <h2 class="features-subtitle">What you Get</h2>
-    <h4 class="features-title">You’re not just another applicant and your resume shouldn’t look like one</h4>
+    <h4 class="features-title">You’re Not Just <span class="highlight-text">Another Applicant</span>  And Your <br> Resume Shouldn’t Look Like One</h4>
   </div>
 
   <!-- Features Cards Container -->
   <div class="features-cards">
     <div class="feature-card">
       <img src="images/Frame1.png" alt="ATS Resume" class="feature-image">
-      <p class="feature-title">A Resume That Passes ATS Filters</p>
+      <p class="feature-title">A Resume Format That Gets You Interviews</p>
       <p class="feature-description">Get a professionally written, keyword-optimized resume that lands in recruiter inboxes—not rejection piles.</p>
     </div>
 
     <div class="feature-card">
       <img src="images/Frame2.png" alt="Cover Letter" class="feature-image">
-      <p class="feature-title">A Cover Letter That Gets Read</p>
+      <p class="feature-title">A Cover Letter Style That Stands Out Strong</p>
       <p class="feature-description">Stand out with a cover letter that speaks directly to the role and reflects your strengths.</p>
     </div>
 
@@ -110,7 +139,7 @@
 
     <div class="feature-card">
       <img src="images/Frame4.png" alt="Interview Confidence" class="feature-image">
-      <p class="feature-title">Interview Confidence</p>
+      <p class="feature-title">An Interview Strategy That Builds Confidence</p>
       <p class="feature-description">Interview preparation with real HR professionals so you speak clearly, confidently, and convincingly.</p>
     </div>
   </div>
